--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -16,6 +16,7 @@ $fs15: 15px;
 $fs16: 16px;
 $fs17: 17px;
 $fs18: 18px;
+$fs20: 20px;
 $fs24: 24px;
 $fs28: 28px;
 $fs40: 40px;
@@ -29,3 +30,4 @@ $ffShrikhand: "Shrikhand", cursive;
 $pInline20: 20px;
 //MEDIAQUERIE
 $desktop: 1024px;
+$tablet: 680px;
