--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -66,6 +66,9 @@
     @extend .howToUse_title;
     margin-top: 50px;
   }
+  .restaurant_flex {
+    width: 100%;
+  }
   .restaurant_card {
     box-shadow: 0px 4px 15px 0px #0000001a;
     border-radius: 0 0 15px 15px;
@@ -81,7 +84,7 @@
       right: 10px;
     }
     .restaurant_card-img {
-      aspect-ratio: 16/9;
+      width: 100%;
       height: 230px;
       object-fit: cover;
       border-radius: 15px 15px 0 0;
