--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import "components/_animation.scss";
 @import "components/_heart.scss";
 @import "components/_loader.scss";
+@import "components/_fadeMenu.scss";
 @import "pages/_home.scss";
 @import "layout/_header.scss";
 @import "layout/_footer.scss";
