--- a/scss/components/_animation.scss
+++ b/scss/components/_animation.scss
@@ -23,3 +23,13 @@
     transform: rotate(360deg);
   }
 }
+// MENU FADE
+@keyframes fadeUp {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
